--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,8 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: 'Samples\C#\NotepadAndCalculatorTest\bin\Release\*Test..dll'
+    artifact: 'tests'
+    publishLocation: 'pipeline'
