--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,7 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: PublishPipelineArtifact@1
+- task: PublishBuildArtifacts@1
   inputs:
-    targetPath: 'Samples/C#/NotepadAndCalculatorTest/**/*.dll'
-    artifact: 'tests'
-    publishLocation: 'pipeline'
+    PathtoPublish: 'Samples/C#/NotepadAndCalculatorTest/**/*.dll'
+    ArtifactName: 'tests'
